--- a/package.json
+++ b/package.json
@@ -2,36 +2,36 @@
     "name": "tanstack-query-todo",
     "private": true,
     "scripts": {
-        "start": "meteor run",
+        "start": "meteor run --port 4000",
         "test": "meteor test --once --driver-package meteortesting:mocha",
         "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
         "visualize": "meteor --production --extra-packages bundle-visualizer"
     },
     "dependencies": {
-        "@babel/runtime": "^7.24.7",
-        "@tanstack/query-sync-storage-persister": "^5.49.0",
-        "@tanstack/react-query": "^5.49.0",
-        "@tanstack/react-query-devtools": "^5.49.0",
-        "@tanstack/react-query-persist-client": "^5.49.0",
+        "@babel/runtime": "^7.25.0",
+        "@tanstack/query-sync-storage-persister": "^5.51.16",
+        "@tanstack/react-query": "^5.51.16",
+        "@tanstack/react-query-devtools": "^5.51.16",
+        "@tanstack/react-query-persist-client": "^5.51.16",
         "@zodern/babel-plugin-meteor-relay": "^1.1.4",
         "autoprefixer": "^10.4.19",
         "idb-keyval": "^6.2.1",
         "meteor-node-stubs": "^1.2.9",
-        "postcss": "^8.4.39",
+        "postcss": "^8.4.40",
         "postcss-load-config": "^6.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.24.0",
+        "react-router-dom": "^6.25.1",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/react-router-dom": "^5.3.3",
-        "prettier": "^3.3.2",
+        "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.5",
-        "tailwindcss": "^3.4.4",
-        "typescript": "^5.5.2"
+        "tailwindcss": "^3.4.7",
+        "typescript": "^5.5.4"
     },
     "meteor": {
         "mainModule": {
