--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.25.0",
-        "@tanstack/query-sync-storage-persister": "^5.51.16",
-        "@tanstack/react-query": "^5.51.16",
-        "@tanstack/react-query-devtools": "^5.51.16",
-        "@tanstack/react-query-persist-client": "^5.51.16",
+        "@meteor-vite/plugin-zodern-relay": "^1.0.2",
+        "@tanstack/query-sync-storage-persister": "^5.51.17",
+        "@tanstack/react-query": "^5.51.18",
+        "@tanstack/react-query-devtools": "^5.51.18",
+        "@tanstack/react-query-persist-client": "^5.51.18",
+        "@vitejs/plugin-react": "^4.3.1",
         "@zodern/babel-plugin-meteor-relay": "^1.1.4",
         "autoprefixer": "^10.4.19",
         "idb-keyval": "^6.2.1",
@@ -21,7 +23,7 @@
         "postcss-load-config": "^6.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.25.1",
+        "react-router-dom": "^6.26.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
@@ -31,7 +33,9 @@
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.5",
         "tailwindcss": "^3.4.7",
-        "typescript": "^5.5.4"
+        "typescript": "^5.5.4",
+        "meteor-vite": "^1.10.3",
+        "vite": "^4.5.3"
     },
     "meteor": {
         "mainModule": {
