--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@babel/preset-typescript": "^7.24.7",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/react-router-dom": "^5.3.3",
+        "meteor-vite": "^1.10.3",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.5",
         "tailwindcss": "^3.4.7",
         "typescript": "^5.5.4",
-        "meteor-vite": "^1.10.3",
         "vite": "^4.5.3"
     },
     "meteor": {
