Use non-typescript entrypoints for Meteor

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     },
     "meteor": {
         "mainModule": {
-            "client": "client/main.tsx",
-            "server": "server/main.ts"
+            "client": "client/main.js",
+            "server": "server/main.js"
         },
         "testModule": "tests/main.js"
     }
